# pos-product-core

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: router.py
app/core/: bindings.py  config.py  external_http.py
app/db/: __init__.py  init_db.py  models.py  session.py
app/document_storage/: __init__.py  azure_blob.py  base.py  factory.py  filesystem.py
app/domains/applications/: router.py
app/domains/document_output/: __init__.py  schemas.py  service.py
app/domains/health_questions/: router.py  schemas.py  service.py
app/domains/proposals/: router.py
app/domains/runtime/: router.py  schemas.py  service.py
app/domains/sales_process/: router.py  schemas.py  service.py
app/domains/status_engine/: router.py  schemas.py  service.py
app/domains/tariffs/: calculation.py  router.py  schemas.py  service.py
app/models/: common.py
app/repositories/: artifact_repository.py  json_store_repository.py  sales_process_db_repository.py
docs/: DATABASE_VERSIONING.md  DOCUMENT_STORAGE.md
